@@ -31,6 +31,7 @@ ___
 * checkbox widget has a isSwitch parameter for a horizontal slider switch
 * label widget added
 * chips widget added
+* inputLookup widget added
 * cube/cubeModel parameter requestChain added to allow custom request builders
 * sticky table (rows/cols) functionality added (either via htmlBuilder parameters or cube layout cube:Freeze element)
 * messages editor and viewer added
